--- a/prdemo/package.json
+++ b/prdemo/package.json
@@ -33,8 +33,9 @@
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
     "angular-in-memory-web-api": "~0.2.4",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.3.3",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.7.4"
